added link to misread-tsne

--- a/notebooks/solutions.ipynb
+++ b/notebooks/solutions.ipynb
@@ -518,6 +518,14 @@
    "source": [
     "plot_faces(face_tsne, faces)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linki\n",
+    "[Interaktywne wizualizacje parametrów t-SNE](http://distill.pub/2016/misread-tsne/)"
+   ]
   }
  ],
  "metadata": {
