--- a/notebooks/t-SNE tutorial.ipynb
+++ b/notebooks/t-SNE tutorial.ipynb
@@ -295,6 +295,14 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linki\n",
+    "[Interaktywne wizualizacje parametrów t-SNE](http://distill.pub/2016/misread-tsne/)"
+   ]
   }
  ],
  "metadata": {
